--- a/ebook-folder/site/module-2/class-7/index.html
+++ b/ebook-folder/site/module-2/class-7/index.html
@@ -2168,54 +2168,9 @@ In the beginning, relating programming concepts to your students can be challeng
 </div>
 </div>
 <h3 id="project-instructions">Project Instructions</h3>
-<p>Fork and clone the following <a href="https://github.com/AustinCodingAcademy/411_wk4_day1_react_router">411_wk4_day1_react_router repository</a>.</p>
-<p>Follow the directions in the readme to complete the project and upload the link to your GitHub repository to Zollege. The project directions are also summed up below:</p>
-<ul class="task-list">
-<li class="task-list-item">
-<p><input type="checkbox"/> Two components have already been created for you, <code>Home</code> &amp; <code>About</code>.</p>
-</li>
-<li class="task-list-item">
-<p><input type="checkbox"/> Look for the <code>Router.js</code> file under the <code>src/</code> folder. This file is basically empty besides a couple imports. You need to create a functional component called   in this file. It will return a <code>Switch</code> component that wraps two <code>Route</code>s. The routes should look like the following:</p>
-<ul>
-<li>"/" -&gt; Home</li>
-<li>"/about" -&gt; About</li>
-</ul>
-</li>
-<li class="task-list-item">
-<p><input type="checkbox"/> Now we are going to take this <code>Router</code> and import it into <code>App.js</code>. Place it right underneath the <code>Navigation</code> component. You will need to <code>import BrowserRouter from "react-router-dom"</code> and use it to wrap both the <code>Navigation</code> and the <code>Router</code> components.</p>
-</li>
-<li class="task-list-item">
-<p><input type="checkbox"/> If you were successful you should see a homepage with a lot of different car details on it. You should also be able to add <code>/about</code> to the end of the url to see the about page. Typing this path in the browser will soon get tiring so let's add them to the <code>Navigation</code> component as <code>&lt;Link&gt;</code>s. There are two commented areas for you to add Links. Create one <code>Link</code> to the <code>Home</code> page and one to the <code>About</code> page. If you forget how to do that, reference the <a href="https://reacttraining.com/react-router/web/api/Link">documentation here</a> or look back at your pre-class lessons.</p>
-</li>
-<li class="task-list-item">
-<p><input type="checkbox"/> Next we want to fill out the <code>Car</code> component in <code>src/Car.js</code> but first we will need to be able to see it and Link to it. Inside of <code>Router.js</code> import the <code>Car</code> component and create a route for it. The path should be able to accept an <code>id</code> for the specific car as well. For example: <code>/car/:id</code>.</p>
-</li>
-</ul>
-<blockquote>
-<p>NOTE: We didn't quite cover this last night but when you write <code>cars/:id</code> the router is looking for a specific number that corresponds with an item in the database, i.e. <code>/cars/6850</code></p>
-</blockquote>
-<ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> Once that is complete, go to the Home component and look for the comment regarding the "a tag". Change that to a Link component and have the <code>to</code> property be: <code>/car/${car.id}</code>. You can leave the text, <code>"See More Details"</code> the same.</li>
-</ul>
-<blockquote>
-<p>Notice how you are routed to the <code>Car</code> component when you click on the <code>Link</code>. Try clicking on different cars. Do you notice that the <code>id</code> is different each time?</p>
-</blockquote>
-<ul class="task-list">
-<li class="task-list-item">
-<p><input type="checkbox"/> Now that we can navigate to the <code>Car</code> component we want to fill out this page so that it looks nice and provides details about the specific car we passed in. To get the specific car, we need to access the <code>id</code> property from the path. We can do that by accessing it from props with: <code>props.match.params.id</code>. Note that if you would have called the parameter, <code>id</code>, something different in the router, say <em>"carId"</em>, then that would change how we access it here as well (<code>params.carId</code>). Before the return statement, create a variable called <code>id</code> and assign it the result from <code>props</code>.</p>
-</li>
-<li class="task-list-item">
-<p><input type="checkbox"/> Now that we have the specific id, we need to find the car in the list that matches that id. You should know how to find items in an array by now so go ahead and find the specific car. Hint: the cars are in the "cars" variable at the top of the file.</p>
-</li>
-<li class="task-list-item">
-<p><input type="checkbox"/> Create the <code>Car</code> component so that it looks like the last image above. To do that, <code>import</code> the material-ui components as specified at the top of the file. You will use the <a href="https://material-ui.com/">material-ui documentation</a> to figure out how to style this page.</p>
-</li>
-<li class="task-list-item">
-<p><input type="checkbox"/> Follow-up Video: <a href="https://youtu.be/l9eyot_IXLY">YT, Ben Awad - React Router v4 Tutorial</a></p>
-</li>
-</ul>
+<p>Fork and clone the following repo: <a href="https://github.com/AustinCodingAcademy/411_wk4_day1_react_router">411_wk4_day1_react_router repository</a>. The instructions are in the README.</p>
 <h3 id="push-yourself-further">Push Yourself Further</h3>
-<p>Follow along with <a href="https://auth0.com/blog/react-router-4-practical-tutorial/">this tutorial</a> from Auth0. Keep in mind that they do things a little differently but it's good to know different ways to write routers.</p>
+<p>Follow along with <a href="https://www.youtube.com/watch?v=59IXY5IDrBA">this tutorial</a>. Keep in mind that they do things a little differently but it's good to know different ways to write routers.</p>
 <h2 id="student-feedback">Student Feedback</h2>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScjuL10i2xFGMWRwkjtgAL8F1Y5ipMPPjtTCDzkO1ZBcxUYZA/viewform?embedded=true" width="640" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 
