added points to capstone rubric

--- a/ebook-folder/site/additionalResources/graduationPrerequisites/index.html
+++ b/ebook-folder/site/additionalResources/graduationPrerequisites/index.html
@@ -1912,22 +1912,22 @@
 <p>Build a full-stack web application using the technology learned in the 4 courses that:</p>
 <ul class="task-list">
 <li class="task-list-item">
-<p><input type="checkbox"/> has a SQL database</p>
+<p><input type="checkbox"/> 25pts. - has a SQL database</p>
 </li>
 <li class="task-list-item">
-<p><input type="checkbox"/> has a back-end that serves the data</p>
+<p><input type="checkbox"/> 25pts. - has a back-end that serves the data</p>
 </li>
 <li class="task-list-item">
-<p><input type="checkbox"/> uses a third-party API</p>
+<p><input type="checkbox"/> 10pts. - uses a third-party API</p>
 </li>
 <li class="task-list-item">
-<p><input type="checkbox"/> has a sign-in strategy</p>
+<p><input type="checkbox"/> 10pts. - has a sign-in strategy</p>
 </li>
 <li class="task-list-item">
-<p><input type="checkbox"/> has a client-side(front-end) app for a user to interact with</p>
+<p><input type="checkbox"/> 20pts. - has a client-side(front-end) app for a user to interact with</p>
 </li>
 <li class="task-list-item">
-<p><input type="checkbox"/> app is deployed and publicly accessible</p>
+<p><input type="checkbox"/> 10pts. - app is deployed and publicly accessible</p>
 </li>
 </ul>
 </li>
