change EOC eval link and instructions for last day

--- a/ebook-folder/site/module-4/class-16/index.html
+++ b/ebook-folder/site/module-4/class-16/index.html
@@ -2090,7 +2090,7 @@
 <li class="task-list-item"><input type="checkbox"/> Questions for Student-Led Discussion</li>
 <li class="task-list-item"><input type="checkbox"/> Interview Challenge</li>
 <li class="task-list-item"><input type="checkbox"/> Student Presentations</li>
-<li class="task-list-item"><input type="checkbox"/> <a href="https://docs.google.com/forms/u/3/d/e/1FAIpQLScSN8i3bPtmSH5KzpRDtH7RBUO0y4sgIji2t2vZ9N4VueYqdg/viewform?usp=sf_link">End of Course Evaluation</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://forms.gle/9LC2puG8yoBwTTAK7">End of Course Evaluation</a></li>
 <li class="task-list-item"><input type="checkbox"/> Creation Time<ul class="task-list">
 <li class="task-list-item"><input type="checkbox"/> Research Solutions for Potential Problems</li>
 <li class="task-list-item"><input type="checkbox"/> Work on your Capstone Project</li>
@@ -2126,7 +2126,7 @@
 <p><a href="../../additionalResources/studentPresentations/">See Student Presentations List</a></p>
 <hr />
 <h2 id="end-of-course-feedback">End of Course Feedback</h2>
-<p>Please take 5 - 10 minutes now to complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLScSN8i3bPtmSH5KzpRDtH7RBUO0y4sgIji2t2vZ9N4VueYqdg/viewform">End of Course Evaluation</a>. This information is incredibly important to our organization to improve, grow our instructors, textbooks, and community.</p>
+<p>Please take 5 - 10 minutes now to complete the <a href="https://forms.gle/9LC2puG8yoBwTTAK7">End of Course Evaluation</a>. This information is incredibly important to our organization to improve, grow our instructors, textbooks, and community.</p>
 <!-- TODO find this form and where it's collecting data -->
 <!-- TODO Improve this FORM!!!  https://docs.google.com/forms/d/1d99ZNONx6Y2XC8DCv_yisiwDUXL1CM5EuV4md1OVyv8/edit -->
 <!-- <iframe id="openedx-zollege" src="https://openedx.zollege.com/end-of-course-survey" style="width: 100%; height: 500px; border: 0">Browser not compatible.</iframe>
@@ -2138,9 +2138,10 @@
 <p><a href="../../additionalResources/blogPrompts/">Blog Prompts</a></p>
 <h2 id="exit-recap-attendance-and-reminders-5-mins">Exit Recap, Attendance, and Reminders, 5 mins</h2>
 <ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> Create Class 16 Blog Assignment</li>
-<li class="task-list-item"><input type="checkbox"/> Prepare 411 course by completing all of your pre-class lessons</li>
-<li class="task-list-item"><input type="checkbox"/> Complete the End of Course Evaluation</li>
+<li class="task-list-item"><input type="checkbox"/> Create/Assign Class 16 Blog Assignment</li>
+<li class="task-list-item"><input type="checkbox"/> Create/Assign Capstone App Checkpoint Assignment</li>
+<li class="task-list-item"><input type="checkbox"/> Review due date for Capstone App with instructor (recommended 2 weeks after course ends)</li>
+<li class="task-list-item"><input type="checkbox"/> Complete the <a href="https://forms.gle/9LC2puG8yoBwTTAK7">End of Course Evaluation</a></li>
 </ul>
 <!-- <iframe id="openedx-zollege" src="https://openedx.zollege.com/feedback" style="width: 100%; height: 500px; border: 0">Browser not compatible.</iframe>
 <script src="https://openedx.zollege.com/assets/index.js" type="application/javascript"></script> -->
