updated docs and code snippets through lesson 4

--- a/ebook-folder/site/module-1/CRA-overview/index.html
+++ b/ebook-folder/site/module-1/CRA-overview/index.html
@@ -2319,8 +2319,8 @@
 
 <h2 id="know-your-docs">Know Your Docs</h2>
 <ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://reactjs.org/docs/create-a-new-react-app.html">React Docs - create-react-app</a></li>
-<li class="task-list-item"><input type="checkbox"/> <a href="https://www.npmjs.com/package/npx">NPM Docs - npx</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://react.dev/learn/start-a-new-react-project">React Dev Docs - create-react-app</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://www.npmjs.com/package/npx">NPM Docs - npx</a> <em>Deprecated and is now part of the NPM CLI toolchain</em></li>
 </ul>
                 
               
