--- a/ebook-folder/site/module-1/introToReact/index.html
+++ b/ebook-folder/site/module-1/introToReact/index.html
@@ -2529,9 +2529,18 @@
 </ul>
 <h2 id="know-your-docs">Know Your Docs</h2>
 <ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> <a href="https://www.npmjs.com/package/npx">NPM Docs - npx</a></li>
-<li class="task-list-item"><input type="checkbox"/> <a href="https://reactjs.org/">React Docs - Home Page</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://www.npmjs.com/package/npx">Legacy NPM Docs - npx</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://legacy.reactjs.org/">Legacy React Docs - Home Page</a></li>
 </ul>
+<hr>
+
+<ul class="task-list">
+<li class="task-list-item"><input type="checkbox"/> <a href="https://react.dev/">React Dev Docs - Home Page</a></li>
+<li class="task-list-item"><input type="checkbox"/> <a href="https://react.dev/reference/rules">React Dev Docs - Rules of React</a></li>
+</ul>
+<hr>
+<hr>
+
 <!-- ! END OF VIDEO 101.1.3.1 - TITLE-->
 <!-- ? Video Numbering and Title system: CourseNumber.ModuleNumber.LessonNumber.VideoNumber -->
 <!-- * (VIDEO 101.2.4.3 - "CSS Selectors") === 101 Course, Module 2, Lesson 4, Video 3 - "CSS Selectors" -->
