--- a/ebook-folder/site/module-1/introToStateAndProps/index.html
+++ b/ebook-folder/site/module-1/introToStateAndProps/index.html
@@ -2480,6 +2480,10 @@
 <h2 id="know-your-docs">Know Your Docs</h2>
 <ul class="task-list">
 <li class="task-list-item"><input type="checkbox"/> <a href="https://reactjs.org/docs/components-and-props.html">Legacy React Docs - Props</a></li>
+</ul>
+<hr>
+
+<ul class="task-list">
 <li class="task-list-item"><input type="checkbox"/> <a href="https://react.dev/learn/passing-props-to-a-component#passing-props-to-a-component">React Dev Docs - Props</a></li>
 </ul>
                 
