fixed bugs from class 1 and 2

--- a/ebook-folder/site/additionalResources/questionsForDiscussion/qfd-class-2/index.html
+++ b/ebook-folder/site/additionalResources/questionsForDiscussion/qfd-class-2/index.html
@@ -2150,7 +2150,7 @@
 </ul>
 <hr />
 <ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> How do we pass data from a parent component to any of its child components? Can someone draw this our for us?</li>
+<li class="task-list-item"><input type="checkbox"/> How do we pass data from a parent component to any of its child components? Can someone draw this out for us?</li>
 <li class="task-list-item"><input type="checkbox"/> Why do we need to pass the data?</li>
 <li class="task-list-item"><input type="checkbox"/> What are attributes and why do we need them in React components?</li>
 <li class="task-list-item"><input type="checkbox"/> How do we create a method in a React component? Where does it go? What's the syntax?</li>
