--- a/ebook-folder/site/module-1/class-1/index.html
+++ b/ebook-folder/site/module-1/class-1/index.html
@@ -2313,14 +2313,14 @@ NOTE: THIS SECTION IS ONLY VISIBLE BY THE INSTRUCTOR. -->
 <h2 id="creation-time-60-90-mins">Creation Time, 60-90 mins</h2>
 <p>As usual, it is incredibly important that you read the pre-homework. If you haven't read the pre-homework and worked through the code-along video YOU WILL BE FAR BEHIND TODAY!!!</p>
 <p>In the pre-homework, you should have downloaded create-react-app and spun up a create-react-app, built a button that changes state from true to false and then displayed the change of state. Today, we're going to continue that process and build a todo app with React!!</p>
-<p><a href="http://todomvc.com/examples/react/#/">Example Simple React Todo App</a></p>
+<p><a href="https://developer.mozilla.org/en-US/docs/Learn/Tools_and_testing/Client-side_JavaScript_frameworks/React_todo_list_beginning">Example Simple React Todo App</a></p>
 <ol>
 <li>
 <p>Create a new react app:</p>
 <ul class="task-list">
 <li class="task-list-item"><input type="checkbox"/> <code>npx create-react-app my-app-name-here</code></li>
 <li class="task-list-item"><input type="checkbox"/> <code>cd my-app-name-here</code></li>
-<li class="task-list-item"><input type="checkbox"/> <code>git init</code> and create a new repe</li>
+<li class="task-list-item"><input type="checkbox"/> <code>git init</code> and create a new repo</li>
 <li class="task-list-item"><input type="checkbox"/> <code>push</code> it to the new repo in GitHub</li>
 <li class="task-list-item"><input type="checkbox"/> <code>git remote add origin "https://github.com/your_github_username/$repo_name.git"</code></li>
 </ul>
@@ -2390,7 +2390,7 @@ NOTE: THIS SECTION IS ONLY VISIBLE BY THE INSTRUCTOR. -->
 </table>
 </li>
 <li class="task-list-item">
-<p><input type="checkbox"/> Follow-up Video: <a href="https://vimeo.com/298214155">Vimeo, Clayton@ACA - Intro to React, 80 mins</a></p>
+<p><input type="checkbox"/> Follow-up Video: <a href="https://youtu.be/8QBYrKhqgFI?feature=shared&amp;t=3024">TY, Coding Addict - React Course: Todo List Project</a></p>
 </li>
 <li class="task-list-item">
 <p><input type="checkbox"/> Or use <strong>METHOD 2</strong>: use <code>setState</code> Hook - <a href="https://www.robinwieruch.de/react-remove-item-from-list">https://www.robinwieruch.de/react-remove-item-from-list</a></p>
