--- a/ebook-folder/site/module-1/class-2/index.html
+++ b/ebook-folder/site/module-1/class-2/index.html
@@ -2343,16 +2343,16 @@
 <h3 id="student-presentations-15-mins">Student Presentations, 15 mins</h3>
 <p><a href="../../additionalResources/studentPresentations/">See Student Presentations List</a></p>
 <h2 id="creation-time-60-90-mins">Creation Time, 60-90 mins</h2>
-<p>Build a simple app that requests information from the <a href="https://punkapi.com/documentation/v2">PUNK API</a> and dynamically renders data from it with React components.</p>
+<p>Build a simple app that requests information from the <a href="https://www.openbrewerydb.org/">https://www.openbrewerydb.org/</a> and dynamically renders data from it with React components.</p>
 <h3 id="project-instructions">Project Instructions</h3>
 <ul class="task-list">
 <li class="task-list-item"><input type="checkbox"/> Pair-program this one</li>
 <li class="task-list-item"><input type="checkbox"/> Create a react app: PUNK-API-REACT-APP</li>
 <li class="task-list-item"><input type="checkbox"/> <code>git init</code> and <code>push</code> it up as a repo</li>
-<li class="task-list-item"><input type="checkbox"/> In your <code>app.js</code> component make an HTTP request with <code>axios</code> to: <a href="https://api.punkapi.com/v2/beers"><code>https://api.punkapi.com/v2/beers</code></a> and set the data that comes back into an array in <code>state</code>.</li>
-<li class="task-list-item"><input type="checkbox"/> Build a beer component that displays everything about the beer</li>
-<li class="task-list-item"><input type="checkbox"/> Map over state and render a component for each beer in state</li>
-<li class="task-list-item"><input type="checkbox"/> Add a button that allows a user to "like" a beer</li>
+<li class="task-list-item"><input type="checkbox"/> In your <code>app.js</code> component make an HTTP request with <code>axios</code> to: <a href="https://api.punkapi.com/v2/beers"><code>https://www.openbrewerydb.org/</code></a> and set the data that comes back into an array in <code>state</code>.</li>
+<li class="task-list-item"><input type="checkbox"/> Build a brewery component that displays everything about the brewery using and <code>&lt;iframe&gt;</code> element to display the website of the brewery.</li>
+<li class="task-list-item"><input type="checkbox"/> Map over state and render a component for each brewery in state</li>
+<li class="task-list-item"><input type="checkbox"/> Add a button that allows a user to "like" a brewery</li>
 </ul>
 <h3 id="follow-up-video">Follow-up Video</h3>
 <ul class="task-list">
@@ -2360,7 +2360,8 @@
 </ul>
 <h3 id="push-yourself-further">Push Yourself Further</h3>
 <ul class="task-list">
-<li class="task-list-item"><input type="checkbox"/> Follow along with Peter Tichy at <a href="https://www.youtube.com/channel/UC7O6CntQoAI-wYyJxYiqNUg">ihatetomatoes</a> through his <a href="https://www.youtube.com/playlist?list=PLkEZWD8wbltnXlfyhS5qSMTNb26utkOkI">React Tutorial</a> to make the app collapsible and interactive</li>
+<li class="task-list-item"><input type="checkbox"/> Create a collapsible list of all the beers of each brewery.</li>
+<li class="task-list-item"><input type="checkbox"/> Follow along with Peter Tichy at <a href="https://www.youtube.com/channel/UC7O6CntQoAI-wYyJxYiqNUg">ihatetomatoes</a> through his <a href="https://www.youtube.com/playlist?list=PLkEZWD8wbltnXlfyhS5qSMTNb26utkOkI">React Tutorial</a> to make the components of the app collapsible and interactive.</li>
 <li class="task-list-item"><input type="checkbox"/> Go find another API and build another React app: <a href="https://apilist.fun/">https://apilist.fun</a></li>
 <li class="task-list-item"><input type="checkbox"/> Build the functionality for your "liked" heart</li>
 </ul>
